# Fastapi-WalletCore

./: .coverage  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/data/: dummy_data.py
app/application/dto/: wallet_currency_update_dto.py  wallet_dto.py  wallet_id_dto.py  wallet_limit_offsset_dto.py
app/application/exceptions/: application_exception.py  dto_exceptions.py  mapper_exception.py
app/application/mapper/: wallet_mapper.py
app/core/logging/: logging_config.py
app/core/sync_async/: sync_to_async_config.py
app/domain/entities/: ledger_entity.py  transaction_entity.py  wallet_entity.py
app/domain/enums/: ledger_direction_enum.py  transaction_status_enum.py  transaction_type_enum.py
app/domain/exceptions/: entity_exception.py  value_object_exception.py
app/domain/repositories/: ledger_repository.py  transaction_repository.py  wallet_repository.py
app/domain/value_objects/: currency_value_object.py  money_value_object.py
app/exception/: exception_handlers.py
app/infrastructure/exceptions/: datasources_exeptions.py
app/infrastructure/repository/: ledger_repository_imp.py  wallet_repository_imp.py
app/presentation/dependencies/: wallet_dependencies.py
app/presentation/routers/: health_router.py  wallet_routers.py
tests/: conftest.py
tests/application/use_case/: test_create_wallet_use_case.py  test_wallet_use_case.py
tests/domain/: test_ledger_entity.py  test_transaction_entity.py  test_wallet_entity.py
tests/domain/value_objects/: test_currency_value_object.py  test_money_value_object.py
(+20 files in other folders)
